service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icb-web-service
spec:
  selector:
    app: icb-web
  ports:
  - protocol: TCP
    port: 80  # Ensure this matches the container port
    targetPort: 8080  # Ensure this matches the container port in the deployment
